<resources>
    <string name="app_name">AksiHijau</string>

    <!--  Splash Screen  -->
    <string name="nama_app_ss">Aksi Hijau</string>
    <string name="nama_kelompok">Create by C23-PS329</string>

    <!--  OnBoarding  -->
    <string name="title_menu_1">Selamat datang, Pahlawan Hijau </string>
    <string name="title_menu_2">Ciptakan Pohon</string>
    <string name="title_menu_3">Pantau Pohon</string>
    <string name="title_menu_4">Saran Pohon</string>
    <string name="desc_menu_1">Jadilah pahlawan hijau dengan Aksi Hijau</string>
    <string name="desc_menu_2">Berkontribusilah dalam pelestarian lingkungan melalui fitur Donasi Pohon kami. Bersama-sama, kita dapat mengurangi jejak karbon, memperbaiki ekosistem, dan menjaga keindahan alam kita.</string>
    <string name="desc_menu_3">Kami percaya pada transparansi dan ingin Anda melihat dampak langsung dari kontribusi Anda. Dapatkan pembaruan tentang proyek yang sedang berlangsung dan saksikan bagaimana setiap langkah yang Anda ambil memberikan perubahan positif bagi dunia kita.</string>
    <string name="desc_menu_4">Kami ingin membantu Anda dalam memilih spesies pohon yang tepat untuk ditanam di area Anda. Fitur Rekomendasi Pohon kami memberikan saran berdasarkan kondisi lingkungan dan kebutuhan spesifik. </string>
    <string name="donation_now">Saatnya jadi pahlawan</string>

    <string name="login">Login</string>
    <string name="sign_up">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="nama">Nama</string>
    <string name="logout">Logout</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="image_content_desc">icon</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_campaign">Kampanye</string>
    <string name="title_history">Riwayat</string>
    <string name="title_profile">Profil</string>

    <!--  Fragment Home  -->
    <string name="title_greatings">Selamat datang, Pahlawan Hijau</string>
    <string name="desc_greatings">Donasimu akan membantu bumi kita menjadi lebih baik</string>
    <string name="title_donasi_home">Selamatkan Alam Sekarang</string>
    <string name="title_artikel_home">Berita Alam Terkini</string>
    <string name="next_donasi">Selengkapnya...</string>


    <!-- List Donation-->
    <string name="title_donation">Gerakan Penanaman 100 Pohon</string>
    <string name="Target_donation">Target</string>
    <string name="donation_collect">Rp 1.000.000</string>
    <string name="Duration">Sisa Hari</string>
    <string name="duration_now">45 Hari</string>
    <string name="search_donation">Cari Donasi</string>

    <!--  Campaign Detail  -->
    <string name="donation_total">Terkumpul dari Rp 6.000.000</string>
    <string name="title_company">Pengalang dana</string>
    <string name="dummy_company">Aksi Hijau</string>
    <string name="title_desc">Deskripsi</string>
    <string name="desc">Berdasarkan data baseline WVI 3 dari 5 desa di Sumba Barat Daya tidak memiliki sumber air bersih selama puluhan tahun Setiap hari warga terpaksa mengkonsumsi air kotor termasuk balita dan anak-anak.</string>
    <string name="title_soil">Jenis Tanah</string>
    <string name="soil">Tanah Gambus</string>
    <string name="newsletter">Kabar Terbaru</string>
    <string name="donatur">Donatur Teratas</string>
    <string name="text_btn_donasi">Donasi Sekarang</string>
    <string name="soil_body">Soil Deskripsi</string>

    <!--  Donatur  -->
    <string name="name_donatur">Juan Angela Alma</string>
    <string name="donasi_donatur">Donasi sebesar Rp50.000</string>
    <string name="waktu_donasi">5 Hari yang lalu</string>
    <string name="no_empty">Tidak ada data yang dapat ditampilkan</string>

    <!--  Profile  -->
    <string name="to_admin">Ke halaman admin ></string>
    <string name="title_name">Nama Lengkap</string>
    <string name="dummy_name">Jhon Doe</string>
    <string name="title_email">Email</string>
    <string name="dummy_email">Johndoe@bangkit.academy</string>
    <string name="title_ttl">Tanggal Lahir</string>
    <string name="dummy_ttl">01 Januari 1990</string>


    <!--  Data Dummy  -->
    <string-array name="data_nama_donasi">
        <item>Mari berdampak bersama Kiara dengan menanam 100 pohon </item>
        <item>Bantu Anak SMP 21 dalam menanam 1000 pohon di sekitar sungai Bumera</item>
    </string-array>

    <string-array name="data_collect_donasi">
        <item>Rp 1.000.000 </item>
        <item>Rp 500.000</item>
    </string-array>

    <string-array name="data_duration_donasi">
        <item>12 hari </item>
        <item>32 hari </item>
    </string-array>

    <string-array name="data_company_donasi">
        <item>Kiara</item>
        <item>SMP 21</item>
    </string-array>

    <string-array name="data_decs_donasi">
        <item>Kiara adalah perusahaan yang bergerak di bidang pencinta alam,
            dan kami mengundang kamu untuk ikut berkontribusi bersami kami
            dalam program penanaman pohon. Kami berencana akan menanam pohon di bandung. mari
            sukseskan event kami, seribu darimu sangat membantu
        </item>
        <item>Kegiatan ini dilaksanakan oleh siswa/i SMP 21 tanggerang, kami sangat berharap
            anda untuk membantu kami dalam pelaksaanan acara ini dan di harapkan dengan
            adanya kegiatan ini dapat menjadi pemancing/trigger untuk sekolah lain untuk bisa
            membantu alam menjadi lebih layak. Kontribusi kamu sangat di harapakan.
        </item>
    </string-array>

    <string-array name="data_soil_donasi">
        <item>Tanah Gambus</item>
        <item>Tanah Kering</item>
    </string-array>

    <string-array name="data_gambar_donasi">
        <item>@drawable/dummy_kiara</item>
        <item>@drawable/dummy_smp_2</item>
    </string-array>


</resources>