<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fiturcampaign.detail.campaign_detail">

    <FrameLayout
        android:id="@+id/FL_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/green_250"
            android:src="@drawable/ic_broken_image_24"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_24"
            android:layout_margin="10dp"/>
    </FrameLayout>

    <TextView
        android:id="@+id/title_donasi_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_donation"
        app:layout_constraintTop_toBottomOf="@id/FL_header"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/title_donasi_detail">
    </RelativeLayout>

    <TextView
        android:id="@+id/donasi_collect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_donasi_detail"
        android:text="@string/donation_collect"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textColor="@color/green_750"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_donation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/donasi_collect">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donation_total"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_now"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/progress_donasi"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/green_750"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/detail_donation"/>

    <TextView
        android:id="@+id/title_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/progress_donasi"
        android:text="@string/title_company"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:id="@+id/RL_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title_company"
        android:layout_margin="10sp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageUser"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:src="@drawable/aksihijau_logo"
            app:civ_border_color="@color/black"
            app:civ_border_width="4dp" />

        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_company"
            android:textColor="@color/black"
            android:layout_marginStart="50dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/title_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/RL_company"
        android:text="@string/desc"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/content_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_desc"
        android:text="@string/desc"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>