<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xml:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvListDonasi"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageDonasi"
            android:layout_width="188dp"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@color/black"
            android:clipToOutline="true"
            android:scaleType="centerCrop"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/imageDonasi"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nameCampaign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/title_donation"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/green_750" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_title_target"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Target_donation"
                    android:textStyle="bold"
                    android:textSize="11sp"
                    android:layout_margin="5dp"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/tv_target"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/donation_collect"
                    android:textSize="11sp"
                    android:layout_margin="5dp"
                    card_view:layout_constraintTop_toBottomOf="@id/tv_title_target"
                    card_view:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tv_title_sisa_hari"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Duration"
                    android:textStyle="bold"
                    android:textSize="11sp"
                    android:layout_margin="5dp"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_sisa_hari"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration_now"
                    android:textSize="11sp"
                    android:layout_margin="5dp"
                    card_view:layout_constraintTop_toBottomOf="@id/tv_title_sisa_hari"
                    card_view:layout_constraintEnd_toEndOf="parent"/>



            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>