<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xml:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvListDonatur"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@color/green_750"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/circle_photo"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_name_donatur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_donatur"
                android:textStyle="bold"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_donasi_donatur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donasi_donatur"
                android:textSize="13dp"
                android:layout_marginTop="2dp"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/tv_name_donatur"/>

            <TextView
                android:id="@+id/tv_date_donatur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waktu_donasi"
                android:textSize="10dp"
                android:layout_marginTop="2dp"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/tv_donasi_donatur"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>